echoserver-ingress-https.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver
  namespace: echoserver
spec:
  rules:
    - host: echoserver.local.gd
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
                service:
                    name: echoserver
                    port:
                        number: 80
